--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     z-index: 0;  
 }
 
-.section {
+.section{
     padding: 20px;
     margin: 10px 0;
     position: relative;
@@ -57,7 +57,7 @@ body{
 .navbar .left a {
     color: white;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin: 0px 15px;
 
 }
@@ -90,7 +90,7 @@ p{
     text-align: center;
 }
 
-.profile-pic {
+.profile-pic{
     display: flex;
     justify-content: center; 
     margin-bottom: 20px;
@@ -128,4 +128,61 @@ p{
     font-family: 'monocutive', monospace;
     font-size: 16px;
     margin-top: 10px;
+}
+
+.more-projects {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    color: white;
+    text-decoration: underline;
+    font-family: 'monocutive', monospace;
+}
+
+/* Estilos para a seção "About Me" */
+#about {
+    max-width: 800px; /* Largura máxima do conteúdo */
+    margin: 0 auto; /* Centraliza horizontalmente */
+    padding: 20px;
+    text-align: center; /* Alinha o texto ao centro (opcional) */
+}
+
+/* Estilo para a foto de perfil */
+.profile-pic {
+    margin: 0 auto 20px; /* Centraliza a imagem e adiciona espaço abaixo */
+    width: 750px; /* Tamanho da foto */
+    border-radius: 50%; /* Deixa a foto redonda (opcional) */
+    overflow: hidden; /* Garante que a imagem respeite o border-radius */
+}
+
+.profile-pic img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Estilo para o parágrafo de texto */
+#about p {
+    line-height: 1.6; /* Melhora a legibilidade */
+    text-align: justify; /* Justifica o texto (opcional) */
+    padding: 0 20px; /* Adiciona um pequeno espaçamento nas laterais */
+}
+
+.link-email{
+    color: white;
+    text-decoration: underline;
+    font-family: 'monocutive', monospace;
+    font-size: 1.5rem;
+    margin-top: 20px;
+}
+
+.scroll-reveal{
+    opacity:0;
+    transform:translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.scroll-reveal.visible{
+    opacity: 1;
+    transform:translateY(0);
 }
